<resources>
    <string name="app_name">Screen Standby</string>
    <string name="service_remote_receiver">Remote receiver</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Screen Standby</string>
    <string name="intro">This little app will temporarily turn off screen backlight without putting phone to sleep.</string>
    <string name="instruction">To turn on the screen again, you can either click on the notification or simply press the power button to lock phone then unlock it</string>
    <string name="btnRemote">Remote controller</string>
    <string name="btnOff">Turn off</string>
    <string name="btnOff_OneTwoDim">One two dim</string>
    <string name="btnmanualconnect">Manual connect to receiver</string>
    <string name="btnstopserver">Stop receiver</string>
    <string name="visitthread">Development thread</string>
    <string name="strdonation">Donate</string>
    <string name="freelicense">Free license (If you donated and the app do not recognise, please restart the app)</string>
    <string name="pref_categ_nonroot_categ">Non ROOT method</string>
    <string name="pref_nonroot">Use Non ROOT method</string>
    <string name="pref_nonroot_sum">A screenfilter like method, which darken the screen without touching the hardware (also affect external picture)</string>
    <string name="pref_nonroot_value">Effectiveness</string>
    <string name="pref_nonroot_value_sum">How low this method should lower the screen brightness</string>
    <string name="pref_htmi_broadcast_connect_intent">Intent on HDMI connection</string>
    <string name="pref_htmi_broadcast_connect_intent_sum">(Advanced) Broadcast an intent when MHL/HDMI connects</string>
    <string name="pref_htmi_broadcast_disconnect_intent">Intent on HDMI disconnection</string>
    <string name="pref_htmi_broadcast_disconnect_intent_sum">(Advanced) Broadcast an intent when MHL/HDMI disconnects</string>
    <string name="pref_htmi_connect_intent">Intent on connection</string>
    <string name="pref_htmi_disconnect_intent">Intent on disconnection</string>
    <string name="pref_intent_title">Specify an intent action (Note: intent is always case-sensitive. An example: com.myintent.AwesomeAction)</string>
    <string-array name="nonrootvalue">
        <item>75</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
        <item>200</item>
        <item>215</item>
        <item>225</item>
        <item>240</item>
        <item>250</item>
        <item>255</item>
    </string-array>
    <string-array name="nonrootnames">
        <item>70% Brightness (Lightest)</item>
        <item>60% Brightness</item>
        <item>50% Brightness</item>
        <item>40% Brightness</item>
        <item>25% Brightness</item>
        <item>20% Brightness (Default)</item>
        <item>12% Brightness</item>
        <item>5% Brightness</item>
        <item>2% Brightness (Darkest)</item>
        <item>0% Brightness (Screen off)</item>
    </string-array>
    <string name="pref_categ_shake">Sensor settings</string>
    <string name="pref_shake_sum">Shaking during screen off toggle between complete and low brightness</string>
    <string name="pref_shake">Use shaking function</string>
    <string name="pref_sensitivity">Sensitivity</string>
    <string name="pref_sensitivity_sum">Choose how sensitive should the program react to your shake</string>
    <string-array name="sensitivityvalue">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="sensitivitynames">
        <item>Highest sensitivity</item>
        <item>Higher</item>
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
        <item>Lower</item>
        <item>Lowest</item>
    </string-array>
    <string-array name="touchpadvalue">
        <item>0.5</item>
        <item>0.75</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
    </string-array>
    <string-array name="touchpadnames">
        <item>Slowest</item>
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
        <item>Fastest</item>
    </string-array>
    <string name="pref_categ_methods">Screen off methods</string>
    <string name="pref_brightness">Zero brightness</string>
    <string name="pref_brightness_sum">Most popular and should be enabled for all devices</string>
    <string name="pref_framebuffer">Persistent blank frame</string>
    <string name="pref_framebuffer_sum">Must be enabled for AMOLED devices (Galaxy S2, S3, etc). Other device may also benefit. This method has no effect to Nexus and some HTC devices.</string>
    <string name="pref_voltage">Samsung Galaxy S3 compatibility</string>
    <string name="pref_voltage_sum">May solve problem with Galaxy S3 users. May also help if you have problem turning screen back on. Please note that this is the voltage cut method, which may be dangerous and should only be used if other methods is not working. The app will attempt to restore the minimum voltage that can support the screen to avoid any damage to hardware</string>
    <string name="pref_blswitch">Linux bl_power switch</string>
    <string name="pref_blswitch_sum">Native linux method of cutting screen backlight. Pretty slow and should be enabled only if other methods fail to work</string>
    <string name="pref_categ_version">App version information</string>
    <string name="pref_update_sum">[To be implemented] Check for new version</string>
    <string name="pref_update">Check for update</string>
    <string name="pref_version">Version</string>
    <string name="pref_lastupdate">Last update</string>
    <string name="pref_categ_acknowledgement">Special thanks to</string>
    <string name="pref_tester">Beta testers</string>
    <string name="pref_donors">Coffee buyers</string>
    <string name="pref_categ_miscellaneous">Miscellaneous settings</string>
    <string name="pref_wakelock">Wake-lock</string>
    <string name="pref_wakelock_sum">Prevent screen from going to sleep during screen off</string>
    <string name="pref_wifilock">Wifi-lock</string>
    <string name="pref_wifilock_sum">Prevent wifi from being disconnected during screen off</string>
    <string name="pref_autobrightness">Handle auto-brightness</string>
    <string name="pref_autobrightness_sum">If auto-brightness is enabled, the app will change it to manual mode during screen off and toggle it back to auto-brightness when the screen is on again</string>
    <string name="pref_disabletouchscreen">Disable touch screen</string>
    <string name="pref_disabletouchscreen_sum">Touchscreen will be temporarily disabled during screen off. Note that statusbar will still be active.</string>
    <string name="pref_ads_sum">Enable ads to support further development of the app. :) It will not be too annoying</string>
    <string name="pref_ads">Ads banner</string>
    <string name="pref_returnhome">Return home screen</string>
    <string name="pref_returnhome_sum">From main window, pressing turn off backlight will then return to home screen automatically</string>
    <string name="pref_proximity">Use proximity sensor</string>
    <string name="pref_proximity_sum">Hover your hand on the sensor to toggle screen off / low brightness</string>
    <string name="pref_proximity_behaviour">Proximity behaviour</string>
    <string name="pref_proximity_behaviour_sum">Configure how proximity sensor should toggle screen on/off</string>
    <string name="btnOn">Emergency on</string>
    <string name="pref_twostages">Use two-stage screen off</string>
    <string name="pref_twostages_sum">First press with put a notification. Then press the notification to turn off screen (great for navigating to other app before off screen)</string>
    <string name="pref_categ_appdetection">App Detection</string>
    <string name="pref_appdetection">Auto detect app</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="troubleshooting_intro">If you have problem, follow below procedures to make the app works on your device</string>
    <string name="troubleshooting_hwoverlay">1. Screen turn on unexpectedly / Device freeze or Youtube / Netflix / Video player show a blank frame?</string>
    <string name="troubleshooting_hwoverlay_text">A temporary fix can be done as follow: \n1) Go to device\'s \"Settings\" - \"Development settings\"\n2) Tick on \"Disable HW Overlay\" (if you can\'t find the option, it may be hidden under Advanced section)</string>
    <string name="troubleshooting_hwoverlay_button">Go to development settings</string>
    <string name="troubleshooting_stockdevice">2. Are you Rooted and has BusyBox installed?</string>
    <string name="troubleshooting_stockrom_text">Make sure that your device is rooted and has the latest version of BusyBox binary installed. Restart the device after installing busybox if necessary. To install busybox, you can hope on Play Store and install a Busybox Installer or simply click on following button</string>
    <string name="troubleshooting_busybox_button">Check for root and BusyBox</string>
    <string name="troubleshooting_cleardata">3. Clear app data</string>
    <string name="troubleshooting_cleardata_text">Clearing app data may help if the app worked before but not anymore. Especially if you made some change in settings or upgraded from old version. Please note that by clearing app data, all of your configurations are reseted to default</string>
    <string name="troubleshooting_cleardata_btn">Clear all data</string>
    <string name="troubleshooting_reportbug">4. Reporting bugs and issues</string>
    <string name="troubleshooting_reportbug_text">If you can\'t still make it run, please generate a log and report bug to developer. You have support from a dedicated developer and development community. Hope to Settings then select \"Enable extensive log\" at the bottom. Run the app, try to recreate the problem. Then go to the app interface, \"Menu\" - \"Print debug info\". Post a log over my email (android@nkahnt.com) or on XDA development thread.</string>
    <string name="troubleshooting_developmentthread_btn">Go to app development thread</string>
    <string name="troubleshooting_trybeta">5. Download and try a beta version</string>
    <string name="troubleshooting_trybeta_text">Beta versions are constantly developed and released. Try one of the latest beta and see if it works for your device?</string>
    <string name="troubleshooting_trybeta_btn">Download beta version</string>
    <string name="manualbrightness">Manual control</string>
    <string name="select_receiver_or_sender">Is this device the receiver or controller?</string>
    <string name="btnreceiver">I am the receiver</string>
    <string name="btncontroller">I am the controller</string>
    <string name="welcomeSettingsWizard_DeviceSelect">Select your device</string>
    <string name="welcomeSettingsWizard_UsecaseSelect">Select your use case</string>
    <string name="welcomeSettingsWizard_Instruction1">Please select your device and your main purpose of using Screen Standby. The wizard will then select the best settings to your scenario</string>
    <string name="welcomeSettingsWizard_Instruction2">Important note(s) on your setup</string>
    <string name="welcomeSettingsWizard_Warn_DisableHW">It is recommended that you enable "Disable Hardware Overlay" in Android\'s Settings -> Developer options to prevent problems</string>
    <string name="welcomeSettingsWizard_Warn_RootBB">You need root and busybox installed on your device. You can skip this step if you have already rooted and installed busybox on your device</string>
    <string name="welcomeSettingsWizard_ResetPrior">Reset all settings to default</string>
    <string name="visitwebsite_long">Screen Standby website</string>
</resources>