<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="fitXY">
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:layout_below="@+id/statusBar">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="20dp"
	    android:paddingRight="10dp"
	    android:paddingTop="10dp"
	    android:orientation="vertical">
	
	    <TextView
	        android:id="@+id/txtTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/troubleshooting"
	        android:textSize="38dp"/>
	
	    <TextView
	        android:id="@+id/txtSummary"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:layout_marginBottom="10dp"
	        android:text="@string/troubleshooting_intro" />
		<View 
	    	android:layout_width="fill_parent" 
	    	android:layout_height="1dp" 
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	    	android:background="?android:attr/listDivider" 
	    />
		    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/troubleshooting_hwoverlay"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/troubleshooting_hwoverlay_text"
	        android:layout_marginTop="3dp"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <Button
	        android:id="@+id/btnTroubleshooting_DevSettings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:background="@drawable/metrobutton"
	        android:text="@string/troubleshooting_hwoverlay_button" />
	    
		<View 
	    	android:layout_width="fill_parent" 
	    	android:layout_height="1dp" 
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	    	android:background="?android:attr/listDivider" 
	    /> 
	     
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/troubleshooting_stockdevice"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/troubleshooting_stockrom_text"
	        android:layout_marginTop="3dp"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <Button
	        android:id="@+id/btnBusybox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:background="@drawable/metrobutton"
	        android:text="@string/troubleshooting_busybox_button" />
	    
		<View 
	    	android:layout_width="fill_parent" 
	    	android:layout_height="1dp" 
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	    	android:background="?android:attr/listDivider" 
	    /> 
	
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/troubleshooting_cleardata"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:text="@string/troubleshooting_cleardata_text"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
		
		<Button
		    android:id="@+id/btnClearData"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="3dp"
		    android:background="@drawable/metrobutton"
		    android:text="@string/troubleshooting_cleardata_btn" />
	
		<View 
	    	android:layout_width="fill_parent" 
	    	android:layout_height="1dp" 
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	    	android:background="?android:attr/listDivider" 
	    /> 
	    
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/troubleshooting_reportbug"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:text="@string/troubleshooting_reportbug_text"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
		<!-- <Button
		    android:id="@+id/btnGotoSetting"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="3dp"
		    android:background="@drawable/metrobutton"
		    android:text="@string/troubleshooting_setting_btn" />-->
	
		<Button
		    android:id="@+id/btnXDAThread"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="3dp"
		    android:background="@drawable/metrobutton"
		    android:text="@string/troubleshooting_developmentthread_btn" />
	
		<View 
	    	android:layout_width="fill_parent" 
	    	android:layout_height="1dp" 
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	    	android:background="?android:attr/listDivider" 
	    />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/troubleshooting_trybeta"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:text="@string/troubleshooting_trybeta_text"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
		<Button
		    android:id="@+id/btnTryBeta"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="3dp"
		    android:background="@drawable/metrobutton"
		    android:text="@string/troubleshooting_trybeta_btn" />
	    <View 
	    	android:layout_width="fill_parent" 
	    	android:layout_height="1dp" 
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	    	android:background="?android:attr/listDivider" 
	    />
	</LinearLayout>
	
	</ScrollView>
</RelativeLayout>