<ScrollView
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentTop="true"
	    android:paddingLeft="@dimen/globalPaddingLeft"
	    android:paddingRight="10dp">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">

			<TextView
		        android:id="@+id/txtSummary"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/select_receiver_or_sender"
			    android:paddingTop="10dp"
			    android:paddingBottom="10dp"
			    android:textAppearance="?android:attr/textAppearanceMedium" />

		    <Button
		        android:id="@+id/btnReceiver"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:background="@drawable/metrobutton"
		        android:drawableLeft="@drawable/receiverico"
		        android:padding="12dp"
			    android:layout_marginBottom="10dp"
		        android:text="@string/btnreceiver"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/white"
		        android:textSize="20dp" />

		    <Button
		        android:id="@+id/btnController"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:background="@drawable/metrobuttongreen"
		        android:drawableLeft="@drawable/senderico"
		        android:padding="12dp"
		        android:text="@string/btncontroller"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/white"
		        android:textSize="20dp" />
	    </LinearLayout>
</ScrollView>